# SoftwareUpdater

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
api/: CMakeLists.txt
api/ConfigClass/: ConfigClass.cpp
api/DownloadTool/: DownloadTool.cpp  DownloadTool.h
config/: main.ini
